<resources>
    <string name="app_name">New_App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SGPA</string>
    <string name="nav_header_subtitle">Calculater using Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Nothing Here</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">5 th Sem</string>
    <string name="menu_slideshow">6 th Sem</string>
    <string name="menu_contacts">7 th Sem</string>
    <string name="menu_neww">8 th Sem</string>
</resources>